generator client {
  provider = "prisma-client"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  CUSTOMER
  ADMIN
}

enum Gender {
  MEN
  WOMEN
  UNISEX
}

enum OrderStatus {
  PLACED
  CONFIRMED
  PROCESSING
  PACKED
  SHIPPED
  OUT_FOR_DELIVERY
  DELIVERED
  CANCELLED
  RETURNED
  REFUNDED
}

enum PaymentMethod {
  CASH_ON_DELIVERY
  BANK_TRANSFER
  CARD
  JAZZCASH
  EASYPAISA
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
  CANCELLED
}

enum ShippingMethod {
  STANDARD
  EXPRESS
}

enum StockStatus {
  IN_STOCK
  LOW_STOCK
  OUT_OF_STOCK
}

enum ReviewStatus {
  PENDING
  APPROVED
  HIDDEN
}

enum CouponType {
  PERCENTAGE
  FIXED
}

enum NotificationType {
  ORDER_PLACED
  ORDER_CONFIRMED
  ORDER_SHIPPED
  ORDER_DELIVERED
  ORDER_CANCELLED
  PROMOTIONAL
  SYSTEM
}

model Profile {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  role      UserRole @default(CUSTOMER)
  firstName String?
  lastName  String?
  email     String?
  phone     String?
  avatarUrl String?
  isActive  Boolean  @default(true)
  newsletter Boolean @default(false)

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  addresses Address[]
  orders    Order[]
  reviews   Review[]
  wishlist  Wishlist[]
  couponUsages CouponUsage[]
  notifications Notification[]

  @@map("profiles")
}

model User {
  id       String  @id
  email    String  @unique
  provider String  @default("email")

  profile Profile?

  @@map("users")
}

model Category {
  id        String   @id @default(cuid())
  name      String   @unique
  slug      String   @unique
  imageUrl  String?
  parentId  String?
  parent    Category? @relation("CategoryHierarchy", fields: [parentId], references: [id])
  children  Category[] @relation("CategoryHierarchy")
  isActive  Boolean  @default(true)
  sortOrder Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  products Product[]

  @@index([parentId])
  @@map("categories")
}

model Brand {
  id          String  @id @default(cuid())
  name        String  @unique
  slug        String  @unique
  logoUrl     String?
  description String?
  country     String?
  website     String?
  isActive    Boolean @default(true)
  sortOrder   Int     @default(0)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  products Product[]

  @@map("brands")
}

model Product {
  id          String   @id @default(cuid())
  slug        String   @unique
  sku         String   @unique
  name        String
  description String?

  price       Decimal @db.Decimal(12, 2)
  discount    Int     @default(0)
  gender      Gender  @default(UNISEX)
  isFeatured  Boolean @default(false)
  isBestSeller Boolean @default(false)
  isNewArrival Boolean @default(false)
  ratingAvg   Decimal @default(0) @db.Decimal(3, 2)
  ratingCount Int     @default(0)

  strapMaterial String?
  caseMaterial  String?
  movement      String?
  caseDiameter  String?
  waterResistance String?
  warranty      String?
  displayType   String?
  occasion      String?
  style         String?

  colors   Json?
  specifications Json?
  featuredImageUrl String?
  videoUrl String?

  status  String @default("ACTIVE")
  isActive Boolean @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  brandId       String
  brand         Brand    @relation(fields: [brandId], references: [id], onDelete: Restrict)
  categoryId    String
  category      Category @relation(fields: [categoryId], references: [id], onDelete: Restrict)

  variants      ProductVariant[]
  images        ProductImage[]
  orderItems    OrderItem[]
  reviews       Review[]
  wishlistedBy  Wishlist[]
  inventoryLogs InventoryLog[]

  @@index([brandId])
  @@index([categoryId])
  @@index([isActive])
  @@index([isNewArrival])
  @@index([isBestSeller])
  @@map("products")
}

model ProductVariant {
  id           String  @id @default(cuid())
  name         String
  sku          String  @unique
  color        String?
  size         String?
  price        Decimal? @db.Decimal(12, 2)
  stock        Int     @default(0)
  stockStatus  StockStatus @default(OUT_OF_STOCK)
  isDefault    Boolean @default(false)
  isActive     Boolean @default(true)

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
  @@map("product_variants")
}

model ProductImage {
  id        String @id @default(cuid())
  url       String
  alt       String?
  sortOrder Int    @default(0)

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@index([productId])
  @@map("product_images")
}

model Address {
  id        String   @id @default(cuid())
  label     String?
  firstName String
  lastName  String?
  phone     String
  house     String
  street    String?
  area      String?
  city      String
  province  String
  postalCode String?
  country   String   @default("Pakistan")
  isDefault Boolean  @default(false)
  createdAt DateTime @default(now())

  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)

  orders Order[]

  @@index([profileId])
  @@map("addresses")
}

model Order {
  id             String   @id @default(cuid())
  orderNumber    String   @unique
  customerName   String
  customerEmail  String
  customerPhone  String

  subtotal  Decimal @db.Decimal(12, 2)
  discount  Decimal @default(0) @db.Decimal(12, 2)
  shipping  Decimal @default(0) @db.Decimal(12, 2)
  tax       Decimal @default(0) @db.Decimal(12, 2)
  total     Decimal @db.Decimal(12, 2)
  couponCode String?
  couponDiscount Decimal @default(0) @db.Decimal(12, 2)

  status   OrderStatus  @default(PLACED)
  paymentMethod PaymentMethod
  paymentStatus PaymentStatus @default(PENDING)
  shippingMethod ShippingMethod @default(STANDARD)

  shippingAddress Json

  estimatedDelivery DateTime?
  deliveredAt  DateTime?
  notes        String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  profileId String?
  profile   Profile? @relation(fields: [profileId], references: [id], onDelete: SetNull)
  addressId String?
  address   Address? @relation(fields: [addressId], references: [id], onDelete: SetNull)

  items         OrderItem[]
  payments      Payment[]
  couponUsages  CouponUsage[]

  @@index([profileId])
  @@index([status])
  @@index([orderNumber])
  @@map("orders")
}

model OrderItem {
  id         String  @id @default(cuid())
  productName String
  sku        String
  imageUrl   String?
  variantName String?
  unitPrice  Decimal @db.Decimal(12, 2)
  quantity   Int
  total      Decimal @db.Decimal(12, 2)

  orderId   String
  order     Order   @relation(fields: [orderId], references: [id], onDelete: Cascade)
  productId String?
  product   Product? @relation(fields: [productId], references: [id], onDelete: SetNull)

  @@index([orderId])
  @@map("order_items")
}

model Payment {
  id        String   @id @default(cuid())
  method    PaymentMethod
  status    PaymentStatus @default(PENDING)
  amount    Decimal  @db.Decimal(12, 2)
  transactionId String?
  reference String?
  paidAt    DateTime?
  createdAt DateTime @default(now())

  orderId String
  order   Order @relation(fields: [orderId], references: [id], onDelete: Cascade)

  @@index([orderId])
  @@map("payments")
}

model Wishlist {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())

  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  @@unique([profileId, productId])
  @@index([profileId])
  @@map("wishlists")
}

model Review {
  id        String   @id @default(cuid())
  rating    Int
  title     String?
  content   String
  status    ReviewStatus @default(PENDING)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)

  images ReviewImage[]

  @@index([productId])
  @@index([profileId])
  @@map("reviews")
}

model ReviewImage {
  id       String @id @default(cuid())
  url      String

  reviewId String
  review   Review @relation(fields: [reviewId], references: [id], onDelete: Cascade)

  @@map("review_images")
}

model Media {
  id        String   @id @default(cuid())
  dataUrl   String
  createdAt DateTime @default(now())

  @@map("media")
}

model Coupon {
  id              String   @id @default(cuid())
  code            String   @unique
  type            CouponType
  value           Decimal  @db.Decimal(12, 2)
  minOrder        Decimal  @default(0) @db.Decimal(12, 2)
  maxDiscount     Decimal? @db.Decimal(12, 2)
  startDate       DateTime @default(now())
  expiryDate      DateTime?
  usageLimit      Int?
  usedCount       Int      @default(0)
  applicableProductIds Json?
  applicableCategoryIds Json?
  isActive        Boolean  @default(true)
  createdAt       DateTime @default(now())

  usages CouponUsage[]

  @@map("coupons")
}

model CouponUsage {
  id        String   @id @default(cuid())
  usedAt    DateTime @default(now())
  orderId   String   @unique
  order     Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  couponId  String
  coupon    Coupon   @relation(fields: [couponId], references: [id], onDelete: Cascade)
  profileId String?
  profile   Profile? @relation(fields: [profileId], references: [id], onDelete: SetNull)
  discount  Decimal  @db.Decimal(12, 2)

  @@index([couponId])
  @@map("coupon_usages")
}

model InventoryLog {
  id        String  @id @default(cuid())
  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Cascade)
  variantId String?
  change    Int
  reason    String
  createdAt DateTime @default(now())

  @@index([productId])
  @@map("inventory_logs")
}

model Notification {
  id        String   @id @default(cuid())
  type      NotificationType
  title     String
  message   String
  link      String?
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())

  profileId String?
  profile   Profile? @relation(fields: [profileId], references: [id], onDelete: Cascade)

  @@index([profileId])
  @@map("notifications")
}

model Page {
  id        String   @id @default(cuid())
  slug      String   @unique
  title     String
  content   String
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("pages")
}

model ContactSubmission {
  id        String   @id @default(cuid())
  name      String
  email     String
  subject   String?
  message   String
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())

  @@map("contact_submissions")
}

model NewsletterSubscriber {
  id        String   @id @default(cuid())
  email     String   @unique
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  @@map("newsletter_subscribers")
}

model AdminLog {
  id        String   @id @default(cuid())
  profileId String?
  action    String
  details   Json?
  createdAt DateTime @default(now())

  @@map("admin_logs")
}